# callmem

./: .gitignore  .mcp.json  .update_check.json  AGENTS.md  CALLMEM-IMPROVEMENTS-SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  OVERNIGHT-REPORT.md  README.md  SECURITY.md  config.toml  config.toml.example  opencode.json  pyproject.toml
.callmem/: .mcp.json  .update_check.json  config.toml  config.toml.example  opencode_db_offset.json
.callmem/.opencode/plugins/: auto-briefing.js  callmem.js
.claude/hooks/: callmem-hook.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.llm-mem/: DECISIONS.md  SESSION.md  TODO.md  config.toml
.llm-mem.backup-20260420-185148/: claude_code_offsets.json
.opencode/: BRIEFING_INSTRUCTIONS.md
.opencode/commands/: briefing.md
.opencode/plugins/: auto-briefing.js  event-logger.js
docs/: ab-benchmark.md  architecture.md  coding-norms.md  config.md  getting-started.md  mcp-integration.md  roadmap.md  schema.md  sensitive-data.md  ui.md
docs/prompts/: architect-review.md  implementer-mode.md  test-fix-mode.md
docs/work-orders/: WO-01-project-setup.md  WO-02-data-models.md  WO-03-cli-skeleton.md  WO-04-core-engine.md  WO-04b-sensitive-data.md  WO-04c-agents-md-mcp-patch.md  WO-05-mcp-server.md  WO-06-ollama-integration.md  WO-07-retrieval-and-briefing.md  WO-08-summarization.md  WO-09-compaction.md  WO-10-web-ui.md  WO-11-background-workers.md  WO-12-opencode-adapter.md  WO-13-feed-card-improvements.md  WO-14-startup-briefing-context-injection.md  WO-15-sse-realtime-ui.md  WO-16-file-tracking-progressive-search.md  WO-17-settings-panel.md  WO-18-ui-polish-project-filter-infinite-scroll.md  WO-19-knowledge-agents.md  WO-20-import-progress-and-background.md  WO-21-smart-model-selection.md  WO-22-re-extraction.md  WO-23-extraction-tests-eventbus.md  WO-24-update-gitignore.md  WO-25-conftest-fixtures.md  WO-26-settings-integration-tests.md  WO-27-mcp-tool-tests.md  WO-28-fp-and-ollama-tests.md  WO-29-migration-cleanup.md  WO-30-timestamp-fixes.md  WO-31-worker-eventbus.md  WO-32-session-isolation.md  WO-33-queue-indicator.md  WO-34-feed-filtering.md  WO-35-one-command-installer.md  WO-36-claude-code-mcp.md  WO-36-implementation-brief.md  WO-37-staleness-detection.md  (+11 more)
scripts/: job_watch.py  session_load.py  session_save.py  setup.py
src/callmem/: __init__.py  cli.py  compat.py  setup_wizard.py
src/callmem/adapters/: __init__.py  claude_code.py  claude_code_import.py  opencode.py  opencode_db.py  opencode_import.py
src/callmem/core/: auto_ingest.py  briefing.py  compaction.py  config.py  crypto.py  database.py  dedupe.py  engine.py  event_bus.py  extraction.py  gpu_scan.py  integrations.py  json_utils.py  knowledge.py  ollama.py  openai_compat.py  prompts.py  queue.py  reextraction.py  repository.py  retrieval.py  staleness.py  summarization.py  usage.py  workers.py
src/callmem/core/migrations/: 001_initial.sql  002_vault.sql  003_summaries_archived.sql  004_entity_keypoints_synopsis.sql  005_entity_files.sql  006_corpora.sql  007_staleness.sql  008_entity_extracted_by.sql  009_tasks.sql  010_model_stats.sql  011_eval_columns.sql  012_model_registry.sql  013_rewind_points.sql  014_project_overview.sql  015_usage_stats.sql
src/callmem/mcp/: __init__.py  resources.py  server.py  tools.py
src/callmem/models/: __init__.py  config.py  edges.py  entities.py  events.py  model_registry.py  model_stats.py  projects.py  rewind.py  sessions.py  summaries.py  tasks.py
src/callmem/templates/: AGENTS.md.template  opencode.json.template
src/callmem/ui/: __init__.py  app.py
src/callmem/ui/routes/: briefing.py  dashboard.py  entities.py  feed.py  files.py  ingest.py  search.py  sessions.py  settings.py  sse.py
src/callmem/ui/templates/: base.html  briefing.html  briefing_preview_partial.html  dashboard.html  dashboard_partial.html  entities.html  feed.html  feed_partial.html  file_timeline.html  files.html  search.html  session_detail.html  sessions.html  settings.html
src/llm_mem/: __init__.py  cli.py
src/llm_mem/adapters/: claude_code.py  claude_code_import.py  opencode.py  opencode_import.py
src/llm_mem/core/: __init__.py  briefing.py  compaction.py  config.py  crypto.py  database.py  engine.py  event_bus.py  extraction.py  gpu_scan.py  knowledge.py  ollama.py  openai_compat.py  prompts.py  queue.py  redaction.py  reextraction.py  repository.py  retrieval.py  staleness.py  summarization.py  workers.py
src/llm_mem/core/migrations/: 001_initial.sql  002_vault.sql  003_summaries_archived.sql  006_corpora.sql  007_staleness.sql
src/llm_mem/mcp/: __init__.py  resources.py  server.py  tools.py
src/llm_mem/models/: __init__.py  config.py  edges.py  entities.py  events.py  projects.py  sessions.py  summaries.py
src/llm_mem/ui/: __init__.py  app.py
src/llm_mem/ui/routes/: briefing.py  dashboard.py  entities.py  feed.py  search.py  sessions.py  settings.py  sse.py
src/llm_mem/ui/templates/: base.html  (+11 more)
templates/: AGENTS.md.template  opencode.json.template
templates/opencode/commands/: briefing.md
templates/opencode/plugins/: auto-briefing.js
tests/: conftest.py
tests/integration/: test_mcp_server.py  test_pipeline.py  test_project_isolation.py  test_ui.py
tests/unit/: test_auto_ingest.py  test_briefing.py  test_claude_code_import.py  test_claude_code_mcp.py  test_claude_code_tailer.py  test_cli.py  test_compaction.py  test_config.py  test_crypto.py  test_database.py  test_detect_mcp_command.py  test_doctor_and_new.py  test_engine.py  test_event_bus.py  test_extraction.py  test_gpu_scan.py  test_import_cli.py  test_knowledge.py  test_mcp_tools.py  test_models.py  test_ollama_scan.py  test_opencode_adapter.py  test_opencode_import.py  test_overview.py  test_part_a_enhancements.py  test_queue.py  test_redaction.py  test_reextraction.py  test_rename_compat.py  test_repository.py  test_retrieval.py  test_sensitive_integration.py  test_setup_import_scoping.py  test_setup_port_release.py  test_staleness.py  test_summarization.py  test_workers.py
(+1 files in other folders)
